# culminate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
benchmarks/: benchmarks_baseline.json
benchmarks/all_opt/: benchmarks_baseline.json
benchmarks/baseline/: bench_cell.json  bench_config.json  bench_mixed.json  bench_row.json  bench_surge.json  bench_trim.json  benchmarks_baseline.json
benchmarks/crtp/: benchmarks_baseline.json
benchmarks/final/: benchmarks_baseline.json
benchmarks/optimized/: benchmarks_baseline.json
benchmarks/template_cols/: benchmarks_baseline.json
examples/: CMakeLists.txt  Makefile  example.cpp
include/: culminate.h
include/culminate/: culminate.h
tests/: CMakeLists.txt  test_benchmark.cpp  test_cell.cpp  test_decorators.cpp  test_level.cpp  test_row.cpp  test_surge.cpp  test_trim.cpp
